-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
4.6.2
-
None
-
Microsoft Windows XP Professional SP3
Qt SDK 2010.02.1
When building with jom in Qt Creator, the output seems to be buffered.
This means it doesn't always show the current command being executed by jom and that you have to wait a while for the output to be flushed.
Ideally it should show each line as it is being executed.