fix output buffering issue

After printing command output, flush the stream so the output is shown
as the command is executing instead of being buffered unnecessarily.

Task-number: QTBUG-10798
Signed-off-by: Joerg Bornemann <joerg.bornemann@nokia.com>